--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ src="https://www.facebook.com/tr?id=1330673925056854&ev=PageView&noscript=1"
 
     <div class="container">
       <div class="judul_game">
-        <div class="nama_judul_game"> Recommendation 92R</div>
+        <div class="nama_judul_game"> Recommendation 92PAK</div>
       </div>
       <div class="game mb10">
           <a href="https://www.92pak8.com/#/register?invitationCode=61812356512"> <img class="list_game" alt="" src="https://i.postimg.cc/wBBFKyHk/DRAGON-TIGER.webp"/> </a>
