--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ src="https://www.facebook.com/tr?id=1330673925056854&ev=PageView&noscript=1"
      </div>
     <div class="container">
       <div class="header-button">
-        <a class="animated-button1" href="https://t.me/@tsgame_official"><span></span><span></span><span></span><span></span>🔥 TELEGRAM 🔥 </a>
+        <a class="animated-button1" href="https://t.me/YURIwith92PAK"><span></span><span></span><span></span><span></span>🔥 TELEGRAM 🔥 </a>
       </div>
 
     <div class="container">
